# cppaudio

./: .gitignore  CMakeLists.txt  README.md
cppaudio/: CMakeLists.txt
cppaudio/include/cppaudio/: engine.h  wave.h
cppaudio/src/: CMakeLists.txt  engine.cpp  wave.cpp
cppaudio/tests/: CMakeLists.txt
cppaudio/tests/launcher_engine/: CMakeLists.txt  main_test.cpp
cppaudio/tests/ring_engine/: CMakeLists.txt  main_test.cpp
release/: CMakeLists.txt
release/include/cppaudio/: engine.h  reader.h  wave.h
release/src/: engine.cpp  reader.cpp  wave.cpp
release/tests/: CMakeLists.txt
release/tests/TestLauncherEngine/: CMakeLists.txt  main_test.cpp
release/tests/launcher_engine/: main_test.cpp
release/tests/ring_engine/: main_test.cpp
release/tools/: README.md  configure.bash  main.go  pattern.csv  pattern.rb
release/tools/template/: CMakeLists.txt  TestBlankLauncherEngine.cpp  TestDelayFormatLauncherEngine.cpp  TestDelayLauncherEngine.cpp  TestDoubleFormatLauncherEngine.cpp  TestFadeLauncherEngine.cpp  TestFixedFormatLauncherEngine.cpp  TestHalfFormatLauncherEngine.cpp  TestInterruptLauncherEngine.cpp  TestKickPattern01.cpp  TestKickPattern02.cpp  TestKickPattern03.cpp  TestKickPattern04.cpp  TestKickPattern05.cpp  TestKickPattern06.cpp  TestKickPattern07.cpp  TestKickPattern08.cpp  TestKickPattern09.cpp  TestKickPattern10.cpp  TestKickPattern11.cpp  TestKickPattern12.cpp  TestKickPattern13.cpp  TestKickPattern14.cpp  TestKickPattern15.cpp  TestKickPattern16.cpp  TestKickPattern17.cpp  TestKickPattern18.cpp  (+53 more)
src/: engine.cpp  engine.h  wave.cpp  wave.h
(+9 files in other folders)
